--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     <button
                         type="button"
                         @click="view = 'home'; clearAll()"
-                        class="inline-flex items-center px-2 sm:px-3 py-2 border border-gray-300 shadow-sm text-xs sm:text-sm leading-4 font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus-enhanced smooth-transition min-h-touch min-w-touch justify-center scale-press"
+                        class="inline-flex items-center px-2 sm:px-3 py-2 border border-blue-300 shadow-sm text-xs sm:text-sm leading-4 font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus-enhanced smooth-transition min-h-touch min-w-touch justify-center scale-press"
                         aria-label="Vrátit se na homepage"
                     >
                         <svg class="h-4 w-4 sm:mr-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
