--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                     </button>
                 </div>
                 <p id="generate-help" class="text-xs text-gray-500 mt-2">
-                    💡 Vložte text, nahrajte nebo vyfotografujte obrázek pro vygenerování QR kódu
+                    Vložte text, nahrajte nebo vyfotografujte obrázek pro vygenerování QR kódu
                 </p>
                 
                 <!-- URL Too Long Warning -->
